feat(models): support model updates
