# src/DocflowAi.Net.Application/Abstractions/IModelService.cs
@@ -8,6 +8,8 @@ public interface IModelService
     IEnumerable<ModelDto> GetAll();
     ModelDto? GetById(Guid id);
     ModelDto Create(CreateModelRequest request);
+    ModelDto Update(Guid id, UpdateModelRequest request);
+    void Delete(Guid id);
     void StartDownload(Guid id);
     string GetDownloadLog(Guid id);
 }
